removed pre slashes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta http-equiv="CACHE-CONTROL" content="NO-CACHE" />
         <meta http-equiv="PRAGMA" content="NO-CACHE" />
 
-        <link rel="icon" href="/assets/favicon-32.ico">
+        <link rel="icon" href="assets/favicon-32.ico">
 
         <title>Chameleon - Responsive Design</title>
 
@@ -20,8 +20,8 @@
             rel="stylesheet"
         />
 
-        <link rel="stylesheet" href="/assets/style.css" />
-        <script src="/assets/main.js"></script>
+        <link rel="stylesheet" href="assets/style.css" />
+        <script src="assets/main.js"></script>
     </head>
     <body>
         <header>
