added google analytics

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta http-equiv="CACHE-CONTROL" content="NO-CACHE" />
         <meta http-equiv="PRAGMA" content="NO-CACHE" />
 
-        <link rel="icon" href="assets/favicon-32.ico">
+        <link rel="icon" href="assets/favicon-32.ico" />
 
         <title>Chameleon - Responsive Design</title>
 
@@ -22,6 +22,21 @@
 
         <link rel="stylesheet" href="assets/style.css" />
         <script src="assets/main.js"></script>
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=UA-16905202-5"
+        ></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+
+            gtag("config", "UA-16905202-5");
+        </script>
     </head>
     <body>
         <header>
